# personal-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  docker-release.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: core.py  tools.py
backend/app/agents/: __init__.py  manager.py  models.py  orchestrator.py
backend/app/api/v1/: agent.py  agents.py  auth.py  chat.py  files.py  mcp.py  memory.py  models.py  scheduler.py  skills.py  token_usage.py
backend/app/cli/: main.py
backend/app/core/: exceptions.py  security.py
backend/app/mcp/: __init__.py  client.py  manager.py  models.py
backend/app/memory/: __init__.py  extractor.py  long_term.py  models.py  retriever.py  short_term.py  store.py
backend/app/models/: database.py  schemas.py
backend/app/scheduler/: __init__.py  engine.py  heartbeat.py  manager.py  models.py  types.py
backend/app/services/token_usage/: __init__.py  interceptor.py  models.py  prices.py  service.py
backend/app/skills/: __init__.py  base.py  manager.py
backend/app/skills/builtin/: __init__.py  news_skill.py  search.py  summarize.py  weather.py  weather_skill.py
backend/app/tools/: __init__.py  base.py  code_execution.py  file_analysis.py  manager.py  system_tools.py  web_search.py
backend/app/websocket/: __init__.py  manager.py  routes.py
backend/tests/: conftest.py  test_websocket.py
backend/tests/test_api/: test_health.py
docker/: Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docker/nginx/: nginx.conf
docs/: DEPLOY.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatWindow.tsx  FileUpload.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  ToolCallDisplay.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/hooks/: index.ts  useWebSocket.ts
frontend/src/pages/: Agents.tsx  Chat.tsx  Files.tsx  Home.tsx  Login.tsx  Memory.tsx  Scheduler.tsx  Settings.tsx  Skills.tsx  TokenUsage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  chatStore.ts  index.ts
scripts/: install.bat  install.sh  start.bat  start.sh
