[project]
name = "personal-agent"
version = "0.1.0"
description = "A personal AI agent with multi-model support and Web UI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Personal Agent Team"}
]
keywords = ["ai", "agent", "llm", "chatbot", "personal-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.0",
    "python-socketio>=5.12.0",

    # AI/LLM
    "openai>=1.59.0",
    "anthropic>=0.45.0",
    "litellm>=1.59.0",

    # Data & Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.37",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",

    # Async & Utils
    "httpx>=0.28.0",
    "websockets>=14.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "tenacity>=9.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",

    # Tools
    "duckduckgo-search>=7.2.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
personal-agent = "app.main:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # Line too long
    "B008",   # Depends() in arg defaults (FastAPI pattern, false positive)
    "E722",   # Bare except (common in async/threading code)
    "C401",   # Generator style (minor)
    "C416",   # Dict comprehension style (minor)
    "E712",   # Comparison to True (minor)
    "B027",   # Empty method in abstract class (intentional noop)
    "B007",   # Unused loop vars (pkgutil.iter_modules signature)
    "B017",   # pytest.raises(Exception) - intentional broad catch
    "N818",   # Exception naming convention
    "F841",   # Unused variable (common in test code)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
